# Gestura

./: README.md
Gesture_Control_Node/: package.xml  setup.cfg  setup.py
Gesture_Control_Node/Gesture_Control_Node/: Step1_Directions.py  Step2_Grippers.py  Step_1.py  Step_2.py  final_S1_s2.py
gestura_simulation/: package.xml  setup.cfg  setup.py
gestura_simulation/gestura_simulation/: key_publisher.py
gestura_simulation/launch/: own.launch.py
gestura_simulation/models/STL_Files/: Left_gripper.stl  Right_gripper.stl
gestura_simulation/models/vehicle/: gestura.sdf  gestura.urdf  gesture_plus_world.sdf  model.sdf
gestura_simulation/worlds/: vehicle.sdf
