<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gestura_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="divam@todo.todo">divam</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Fortress (default) -->
  <exec_depend condition="$GZ_VERSION == fortress or $IGNITION_VERSION == fortress">ignition-gazebo6</exec_depend>
  <exec_depend condition="$GZ_VERSION == '' and $IGNITION_VERSION == ''">ignition-gazebo6</exec_depend>
  <!-- Edifice -->
  <exec_depend condition="$GZ_VERSION == edifice or $IGNITION_VERSION == edifice">ignition-gazebo5</exec_depend>

  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <!-- See https://github.com/gazebosim/ros_gz/issues/40 -->
  <!--exec_depend>ros_gz_point_cloud</exec_depend-->
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <depend>rclpy</depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-pynput</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

